@@ -21,7 +21,8 @@ cod-tools (unreleased)
     - COD::CIF::Data:
       - slightly reworded several warning messages.
     - COD::CIF::Data::AtomList:
-      - rewritten dump_atoms_as_cif() using standard CIF printing routines.
+      - rewritten dump_atoms_as_cif() using standard CIF printing routines;
+      - updated several warning messages.
     - COD::CIF::Data::Check:
       - replaced a composite warning message pertaining to bibliography-related
         data items with several messages of greater specificity.
